--- a/viewer.ipynb
+++ b/viewer.ipynb
@@ -2,50 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac24cd3a77e744c8909bff8bd2dec67f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ipywidgets in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (8.1.3)\n",
+      "Requirement already satisfied: comm>=0.1.3 in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from ipywidgets) (0.2.2)\n",
+      "Requirement already satisfied: ipython>=6.1.0 in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from ipywidgets) (8.26.0)\n",
+      "Requirement already satisfied: traitlets>=4.3.1 in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from ipywidgets) (5.14.3)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0.11 in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from ipywidgets) (4.0.11)\n",
+      "Requirement already satisfied: jupyterlab-widgets~=3.0.11 in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from ipywidgets) (3.0.11)\n",
+      "Requirement already satisfied: decorator in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.19.1)\n",
+      "Requirement already satisfied: matplotlib-inline in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.1.7)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (3.0.47)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (2.18.0)\n",
+      "Requirement already satisfied: stack-data in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.6.3)\n",
+      "Requirement already satisfied: exceptiongroup in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (1.2.2)\n",
+      "Requirement already satisfied: typing-extensions>=4.6 in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (4.12.2)\n",
+      "Requirement already satisfied: colorama in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.4.6)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.3 in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets) (0.8.4)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from prompt-toolkit<3.1.0,>=3.0.41->ipython>=6.1.0->ipywidgets) (0.2.13)\n",
+      "Requirement already satisfied: executing>=1.2.0 in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.0.1)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.4.1)\n",
+      "Requirement already satisfied: pure-eval in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.2.3)\n",
+      "Requirement already satisfied: six>=1.12.0 in c:\\users\\sebastián ferrá\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from asttokens>=2.1.0->stack-data->ipython>=6.1.0->ipywidgets) (1.16.0)\n"
+     ]
     },
     {
-     "data": {
-      "text/plain": [
-       "BaseWebGuiScene"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: jupyter [-h] [--version] [--config-dir] [--data-dir] [--runtime-dir]\n",
+      "               [--paths] [--json] [--debug]\n",
+      "               [subcommand]\n",
+      "\n",
+      "Jupyter: Interactive Computing\n",
+      "\n",
+      "positional arguments:\n",
+      "  subcommand     the subcommand to launch\n",
+      "\n",
+      "options:\n",
+      "  -h, --help     show this help message and exit\n",
+      "  --version      show the versions of core jupyter packages and exit\n",
+      "  --config-dir   show Jupyter config dir\n",
+      "  --data-dir     show Jupyter data dir\n",
+      "  --runtime-dir  show Jupyter runtime dir\n",
+      "  --paths        show all Jupyter paths. Add --json for machine-readable\n",
+      "                 format.\n",
+      "  --json         output paths as machine-readable json\n",
+      "  --debug        output debug information about paths\n",
+      "\n",
+      "Available subcommands: dejavu events execute kernel kernelspec lab\n",
+      "labextension labhub migrate nbconvert run server troubleshoot trust\n",
+      "\n",
+      "Jupyter command `jupyter-nbextension` not found.\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "Please install `trame` and `ipywidgets` to use this feature.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\Sebastián Ferrá\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pyvista\\jupyter\\__init__.py:46\u001b[0m, in \u001b[0;36m_validate_jupyter_backend\u001b[1;34m(backend)\u001b[0m\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 46\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyvista\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtrame\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mjupyter\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m show_trame\n\u001b[0;32m     47\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:  \u001b[38;5;66;03m# pragma: no cover\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Sebastián Ferrá\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pyvista\\trame\\__init__.py:9\u001b[0m\n\u001b[0;32m      7\u001b[0m logging\u001b[38;5;241m.\u001b[39mgetLogger(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrame.app\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mdisabled \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyvista\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtrame\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mjupyter\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m elegantly_launch\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyvista\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtrame\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mjupyter\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m launch_server\n",
+      "File \u001b[1;32mc:\\Users\\Sebastián Ferrá\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pyvista\\trame\\jupyter.py:11\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtrame\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwidgets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m html \u001b[38;5;28;01mas\u001b[39;00m html_widgets\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtrame\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwidgets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m vtk \u001b[38;5;28;01mas\u001b[39;00m vtk_widgets\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtrame\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwidgets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m vuetify \u001b[38;5;28;01mas\u001b[39;00m vuetify2_widgets\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'vtk' from 'trame.widgets' (c:\\Users\\Sebastián Ferrá\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\trame\\widgets\\__init__.py)",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39msystem(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mjupyter nbextension enable --py widgetsnbextension\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyvista\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[43mpyvista\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_jupyter_backend\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhtml\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m visobj \u001b[38;5;241m=\u001b[39m pyvista\u001b[38;5;241m.\u001b[39mread(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvtkout.vtu\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\Sebastián Ferrá\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pyvista\\jupyter\\__init__.py:113\u001b[0m, in \u001b[0;36mset_jupyter_backend\u001b[1;34m(backend, name, **kwargs)\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mset_jupyter_backend\u001b[39m(backend, name\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m     56\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Set the plotting backend for a jupyter notebook.\u001b[39;00m\n\u001b[0;32m     57\u001b[0m \n\u001b[0;32m     58\u001b[0m \u001b[38;5;124;03m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    111\u001b[0m \n\u001b[0;32m    112\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 113\u001b[0m     pyvista\u001b[38;5;241m.\u001b[39mglobal_theme\u001b[38;5;241m.\u001b[39m_jupyter_backend \u001b[38;5;241m=\u001b[39m \u001b[43m_validate_jupyter_backend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbackend\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Sebastián Ferrá\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pyvista\\jupyter\\__init__.py:48\u001b[0m, in \u001b[0;36m_validate_jupyter_backend\u001b[1;34m(backend)\u001b[0m\n\u001b[0;32m     46\u001b[0m         \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyvista\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtrame\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mjupyter\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m show_trame\n\u001b[0;32m     47\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:  \u001b[38;5;66;03m# pragma: no cover\u001b[39;00m\n\u001b[1;32m---> 48\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPlease install `trame` and `ipywidgets` to use this feature.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     50\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m backend \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnone\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m     51\u001b[0m     backend \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: Please install `trame` and `ipywidgets` to use this feature."
+     ]
     }
    ],
-   "source": [
-    "\n",
-    "import pickle\n",
-    "\n",
-    "from ngsolve import *\n",
-    "from ngsolve.webgui import *\n",
-    "gfu = pickle.load(open(\"gfu_EDP_mixed.p\", \"rb\"))\n",
-    "mesh = pickle.load(open(\"mesh_EDP_mixed.p\", \"rb\"))\n",
-    "Draw(gfu.components[0], mesh, \"gfu\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
@@ -65,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
